--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+html {
+  background-color: #142850;
+  color: white;
+}
+
 .App {
-  text-align: center;
+  background-color: #27496D;
+  max-height: 75%;
 }
 
 .App-logo {
