Setup nav bar with logo, dark blue theme

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 html {
-  background-color: #142850;
-  color: white;
+  background-color: #102040;
+  color: #cccccc;
 }
 
 .App {
-  background-color: #27496D;
+  background-color: #1f3a57;
   max-height: 75%;
 }
 
