--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,6 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:wght@700&family=Yellowtail&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&family=Yellowtail&display=swap');
-
 .nav-bar {
   background: #0b162d;
 }
@@ -16,10 +13,10 @@
 /* } */
 
 .logo-text {
-  color: #3eb7a0;
+  color: #1597e5;
   font-family: 'Lato';
   font-weight: 800;
-  top: 2px;
-  margin-left: 8px;
+  top: 4px;
+  margin-left: 9px;
   font-size: 1.2em;
 }
